# djangohm23.2

./: .env.sample  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
catalog/management/commands/: load_data.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0003_alter_product_image.py  0004_blogpost.py  0005_remove_blogpost_preview_image_remove_blogpost_views_and_more.py  0006_version.py  0007_product_owner.py  0008_product_publish_status.py  0009_alter_product_options.py
catalog/templates/catalog/: add_version.html  base.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  category_list.html  contacts.html  delete_version.html  edit_version.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html
catalog/templates/includes/: menu.html
config/: settings.py  urls.py
fixtures/: catalog_data.json  groups.json
static/css/: styles.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: edit_profile.html  login.html  password_reset.html  register.html  verify_email.html
