[tool.poetry]
name = "projecthm1"
version = "0.1.0"
description = ""
authors = ["Dmitriy Kucheriaviy <dmitask@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg2 = "^2.9.10"
pillow = "^11.0.0"
ipython = "^8.29.0"
psycopg2-binary = "^2.9.10"
psycopg = "^3.2.3"
django-redis = "^5.4.0"
redis = "^5.2.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
